Criada Api para retornar todos os projetos e criado documentação dela no swagger.
