# routes/projects-routes.js
@@ -4,7 +4,7 @@ const router = express.Router();
 
     
 router.post('/projects', [projectsService.createProject]);
-//router.get('/projects/:id',[ProjecstMddl.validateId,ProjectsCtrl.getProjectById]);
+router.get('/projects',[projectsService.getProjects]);
 //router.put('/projects/:id', ProjectsCtrl.changeProjectById);
 //router.delete('/projects/:id', ProjectsCtrl.deleteProjectById);
 //router.post('/projects/:id/tasks', ProjectsCtrl.addTasksToProjectById);
